--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vercel/blob": "^0.23.3",
     "axios": "^1.7.2",
     "express": "^4.19.2"
   },
